syntax = "proto3";

package user;

option go_package = "ms-practice/user-service/pkg/pb";

message User {
    int32 id = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string birthday = 5;
    string phone_number = 6;
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    User user = 1;
}

service UserService {
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
}
